--- a/index.html
+++ b/index.html
@@ -5,11 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="calculator.js"></script>
 </head>
 <body>
-    Hello, world
+ <table>
+    <tr>
+        <tb>1</tb>  
+        <tb>2</tb>
+        <tb>3</tb>
+        <tb>4</tb>
 
-    the calculator will look like this:
-    <img src="example.png">
+    </tr>
+
+    <tr>
+        <tb>5</tb>
+        <tb>6</tb>
+        <tb>7</tb>
+        <tb>8</tb>
+    </tr>
+
+    <tr>
+        <tb>9</tb>
+        <tb>0</tb>
+    </tr>
+
+
+ </table>
 </body>
 </html>
